Developer/src/objects/Inquiry__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>問い合わせ元クライアント</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>問い合わせ</relationshipLabel>
        <relationshipName>Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>詳細</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>問い合わせタイトル</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>問い合わせ</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>問い合わせ名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>OwnerRoleSharingReason__c</fullName>
        <label>所有者のロールへの共有</label>
    </sharingReasons>
</CustomObject>